updated code and images

--- a/video-dibujostyle.ipynb
+++ b/video-dibujostyle.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,8 @@
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
+    "    \n",
+    "    smoothed = cv2.bilateralFilter(frame, d=9, sigmaColor=75, sigmaSpace=75)\n",
     "\n",
     "    # Redimensionar el marco para procesamiento más rápido\n",
     "    frame = cv2.resize(frame, (640, 480))\n",
@@ -65,7 +67,7 @@
     "    gradient_colored = cv2.cvtColor(gradient_inv, cv2.COLOR_GRAY2BGR)\n",
     "\n",
     "    # Aplicar el efecto de dibujo\n",
-    "    styled_frame = cv2.bitwise_and(frame, gradient_colored)\n",
+    "    styled_frame = cv2.bitwise_and(smoothed, gradient_colored)\n",
     "\n",
     "    # Mostrar el fotograma en proceso\n",
     "    cv2.imshow('Estilizado en Tiempo Real', styled_frame)\n",
@@ -77,6 +79,268 @@
     "# Liberar recursos\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Inicializar la captura de video desde la webcam (índice 0)\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Crear una ventana de visualización\n",
+    "cv2.namedWindow('Efectos Especiales en Tiempo Real', cv2.WINDOW_NORMAL)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Redimensionar el marco para procesamiento más rápido\n",
+    "    frame = cv2.resize(frame, (640, 480))\n",
+    "\n",
+    "    # Efecto de Dibujo Animado\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    gray = cv2.medianBlur(gray, 7)\n",
+    "    edges = cv2.adaptiveThreshold(gray, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, 9, 2)\n",
+    "    color = cv2.bilateralFilter(frame, 9, 300, 300)\n",
+    "    cartoon = cv2.bitwise_and(color, color, mask=edges)\n",
+    "\n",
+    "    # Efecto de Cómic\n",
+    "    laplacian = cv2.Laplacian(gray, cv2.CV_8U, ksize=5)\n",
+    "    laplacian_inv = cv2.bitwise_not(laplacian)\n",
+    "    comic = cv2.cvtColor(laplacian_inv, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "    # Mostrar diferentes efectos en distintas partes de la ventana\n",
+    "    stacked = np.hstack((cartoon, comic))\n",
+    "\n",
+    "    # Mostrar el fotograma en proceso\n",
+    "    cv2.imshow('Efectos Especiales en Tiempo Real', stacked)\n",
+    "\n",
+    "    # Romper el ciclo con 'q'\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Liberar recursos\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplos con imagenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "\n",
+    "# Obtener la ruta de la carpeta actual\n",
+    "current_folder = os.getcwd()\n",
+    "\n",
+    "# Función para aplicar un efecto de dibujo animado más pronunciado\n",
+    "def cartoonize_image(image_path):\n",
+    "    # Leer la imagen\n",
+    "    img = cv2.imread(image_path)\n",
+    "    if img is None:\n",
+    "        print(f\"Error: no se puede leer la imagen {image_path}\")\n",
+    "        return\n",
+    "\n",
+    "    # Suavizado bilateral para reducir el ruido mientras se conservan los bordes\n",
+    "    smoothed = cv2.bilateralFilter(img, d=9, sigmaColor=75, sigmaSpace=75)\n",
+    "\n",
+    "    # Convertir a escala de grises\n",
+    "    gray = cv2.cvtColor(smoothed, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Aplicar detección de bordes con Canny\n",
+    "    edges = cv2.Canny(gray, 100, 200)\n",
+    "\n",
+    "    # Invertir los bordes\n",
+    "    edges_inv = cv2.bitwise_not(edges)\n",
+    "    \n",
+    "    # Convertir los bordes a tres canales\n",
+    "    edges_colored = cv2.cvtColor(edges_inv, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "    # Combinar la imagen suavizada con los bordes\n",
+    "    cartoon = cv2.bitwise_and(smoothed, edges_colored)\n",
+    "\n",
+    "    return cartoon\n",
+    "\n",
+    "# Procesar todas las imágenes en la carpeta actual\n",
+    "for filename in os.listdir(current_folder):\n",
+    "    # Filtrar solo archivos de imagen comunes\n",
+    "    if filename.lower().endswith(('.png', '.jpg', '.jpeg', '.bmp', '.gif')):\n",
+    "        input_path = os.path.join(current_folder, filename)\n",
+    "        output_path_original = os.path.join(current_folder, f'original_{filename}')\n",
+    "        output_path_cartoon = os.path.join(current_folder, f'cartoon_{filename}')\n",
+    "        \n",
+    "        # Procesar la imagen\n",
+    "        cartoon_image = cartoonize_image(input_path)\n",
+    "        \n",
+    "        # Guardar la imagen original y la procesada\n",
+    "        cv2.imwrite(output_path_original, cv2.imread(input_path))\n",
+    "        cv2.imwrite(output_path_cartoon, cartoon_image)\n",
+    "\n",
+    "print(\"Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "# Obtener la ruta de la carpeta actual\n",
+    "current_folder = os.getcwd()\n",
+    "imgs_folder = os.path.join(current_folder, 'imgs')\n",
+    "\n",
+    "# Función para aplicar un efecto de dibujo animado usando operaciones morfológicas\n",
+    "def cartoonize_image_morph(image_path):\n",
+    "    # Leer la imagen\n",
+    "    img = cv2.imread(image_path)\n",
+    "    if img is None:\n",
+    "        print(f\"Error: no se puede leer la imagen {image_path}\")\n",
+    "        return\n",
+    "\n",
+    "    # Convertir a escala de grises\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Aplicar la operación de apertura\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (5, 5))\n",
+    "    opened = cv2.morphologyEx(gray, cv2.MORPH_OPEN, kernel)\n",
+    "\n",
+    "    # Aplicar la operación de cerradura\n",
+    "    closed = cv2.morphologyEx(gray, cv2.MORPH_CLOSE, kernel)\n",
+    "\n",
+    "    # Calcular el gradiente morfológico (diferencia entre cerradura y apertura)\n",
+    "    gradient = abs(cv2.subtract(closed, opened))\n",
+    "    \n",
+    "    # Invertir el gradiente para obtener los bordes en blanco\n",
+    "    gradient_inv = cv2.bitwise_not(gradient)\n",
+    "    \n",
+    "    # Expande el gradiente invertido a tres canales para que coincida con la imagen original\n",
+    "    gradient_colored = cv2.cvtColor(gradient_inv, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "    # Combinar la imagen original con los bordes\n",
+    "    cartoon = cv2.bitwise_and(img, gradient_colored)\n",
+    "\n",
+    "    return cartoon\n",
+    "\n",
+    "# Procesar todas las imágenes en la carpeta 'imgs'\n",
+    "for filename in os.listdir(imgs_folder):\n",
+    "    # Filtrar solo archivos de imagen comunes\n",
+    "    if filename.lower().endswith(('.png', '.jpg', '.jpeg', '.bmp', '.gif')):\n",
+    "        input_path = os.path.join(imgs_folder, filename)\n",
+    "        output_path_cartoon = os.path.join(current_folder, f'cartoon_{filename}')\n",
+    "        \n",
+    "        # Procesar la imagen\n",
+    "        cartoon_image = cartoonize_image_morph(input_path)\n",
+    "        \n",
+    "        # Guardar la imagen procesada\n",
+    "        if cartoon_image is not None:\n",
+    "            cv2.imwrite(output_path_cartoon, cartoon_image)\n",
+    "\n",
+    "print(\"Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "# Obtener la ruta de la carpeta actual\n",
+    "current_folder = os.getcwd()\n",
+    "imgs_folder = os.path.join(current_folder, 'imgs')\n",
+    "\n",
+    "# Función para aplicar un efecto de dibujo animado usando operaciones morfológicas\n",
+    "def cartoonize_image_morph(image_path):\n",
+    "    # Leer la imagen\n",
+    "    img = cv2.imread(image_path)\n",
+    "    if img is None:\n",
+    "        print(f\"Error: no se puede leer la imagen {image_path}\")\n",
+    "        return\n",
+    "\n",
+    "    # Convertir a escala de grises\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Aplicar la operación de gradiente morfológico\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (2, 2))\n",
+    "    gradient = cv2.morphologyEx(gray, cv2.MORPH_GRADIENT, kernel)\n",
+    "\n",
+    "    # Aplicar un umbral al gradiente\n",
+    "    _, gradient_thresh = cv2.threshold(gradient, 40, 220, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    # Invertir el gradiente para obtener los bordes en blanco\n",
+    "    gradient_inv = cv2.bitwise_not(gradient_thresh)\n",
+    "    \n",
+    "    # Expande el gradiente invertido a tres canales para que coincida con la imagen original\n",
+    "    expanded_gradient_inv = cv2.merge([gradient_inv, gradient_inv, gradient_inv])\n",
+    "\n",
+    "    # Combinar la imagen original con los bordes\n",
+    "    cartoon = cv2.bitwise_and(img, expanded_gradient_inv)\n",
+    "\n",
+    "    return cartoon\n",
+    "\n",
+    "# Procesar todas las imágenes en la carpeta 'imgs'\n",
+    "for filename in os.listdir(imgs_folder):\n",
+    "    # Filtrar solo archivos de imagen comunes\n",
+    "    if filename.lower().endswith(('.png', '.jpg', '.jpeg', '.bmp', '.gif', '.webp')):\n",
+    "        input_path = os.path.join(imgs_folder, filename)\n",
+    "        output_path_cartoon = os.path.join(current_folder, f'cartoon_{filename}')\n",
+    "        \n",
+    "        # Procesar la imagen\n",
+    "        cartoon_image = cartoonize_image_morph(input_path)\n",
+    "        \n",
+    "        # Guardar la imagen procesada\n",
+    "        if cartoon_image is not None:\n",
+    "            cv2.imwrite(output_path_cartoon, cartoon_image)\n",
+    "\n",
+    "print(\"Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\")\n"
    ]
   }
  ],
