--- a/video-dibujostyle.ipynb
+++ b/video-dibujostyle.ipynb
@@ -9186,7 +9186,7 @@
     "import torchvision.models as models\n",
     "import torchvision.transforms as transforms  # Añadir esta línea\n",
     "\n",
-    "# Descargar el modelo UNet preentrenado\n",
+    "# Descargar el modelo RESNet preentrenado\n",
     "model = models.segmentation.deeplabv3_resnet101(pretrained=True)\n",
     "model = model.eval()  # Establecer el modelo en modo de evaluación (no entrenamiento)\n"
    ]
@@ -9337,104 +9337,6 @@
     "            cv2.imwrite(output_path_cartoon, cartoon_image)\n",
     "\n",
     "print(\"Procesamiento completado. Las imágenes se han guardado en la carpeta actual.\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#Ejemplos con Videos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torchvision.models as models\n",
-    "import torchvision.transforms as transforms\n",
-    "import cv2\n",
-    "\n",
-    "# Descargar el modelo FCN-ResNet101 preentrenado\n",
-    "model = models.segmentation.fcn_resnet101(pretrained=True)\n",
-    "model = model.eval()  # Establecer el modelo en modo de evaluación (no entrenamiento)\n",
-    "\n",
-    "# Función para preprocesar la imagen capturada\n",
-    "def preprocess_image(img):\n",
-    "    # Redimensionar imagen a tamaño esperado por el modelo (128x128 píxeles)\n",
-    "    transform = transforms.Compose([\n",
-    "        transforms.ToPILImage(),  # Convertir la imagen de numpy array a PIL Image\n",
-    "        transforms.Resize((128, 128)),  # Redimensionar la imagen a 128x128 píxeles\n",
-    "        transforms.ToTensor(),  # Convertir la imagen a un tensor de PyTorch\n",
-    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),  # Normalizar los valores de los píxeles\n",
-    "    ])\n",
-    "    img = transform(img)  # Aplicar todas las transformaciones definidas arriba a la imagen\n",
-    "    img = img.unsqueeze(0)  # Agregar una dimensión adicional al tensor (batch dimension)\n",
-    "    return img\n",
-    "\n",
-    "# Función para procesar un video\n",
-    "def process_video(input_file, output_file=None):\n",
-    "    cap = cv2.VideoCapture(input_file)  # Abrir el archivo de video\n",
-    "    \n",
-    "    # Verificar si el video se abrió correctamente\n",
-    "    if not cap.isOpened():\n",
-    "        print(f\"No se pudo abrir el archivo de video: {input_file}\")\n",
-    "        return\n",
-    "    \n",
-    "    # Obtener las propiedades del video\n",
-    "    frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "    frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
-    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "    \n",
-    "    # Redimensionar la resolución del video de salida\n",
-    "    target_width = 128  # Ancho objetivo\n",
-    "    target_height = int(frame_height * (target_width / frame_width))  # Mantener la relación de aspecto\n",
-    "    target_size = (target_width, target_height)\n",
-    "    \n",
-    "    # Crear objeto para guardar el video procesado si se especifica un nombre de archivo de salida\n",
-    "    if output_file:\n",
-    "        out = cv2.VideoWriter(output_file, cv2.VideoWriter_fourcc(*'mp4v'), fps, target_size)\n",
-    "    \n",
-    "    frame_count = 0\n",
-    "    while cap.isOpened():\n",
-    "        ret, frame = cap.read()\n",
-    "        if not ret:\n",
-    "            break\n",
-    "        \n",
-    "        # Redimensionar el fotograma capturado\n",
-    "        frame_resized = cv2.resize(frame, target_size)\n",
-    "        \n",
-    "        # Preprocesar el frame redimensionado\n",
-    "        img = cv2.cvtColor(frame_resized, cv2.COLOR_BGR2RGB)\n",
-    "        img_tensor = preprocess_image(img)\n",
-    "        \n",
-    "        # Pasar la imagen por el modelo FCN-ResNet101\n",
-    "        with torch.no_grad():\n",
-    "            output = model(img_tensor)['out'][0]\n",
-    "        \n",
-    "        # Convertir la salida del modelo a imagen numpy y ajustar para visualización\n",
-    "        output = output.argmax(0).byte().cpu().numpy()\n",
-    "        \n",
-    "        # Mostrar la imagen procesada en la consola o guardarla en el video de salida\n",
-    "        if output_file:\n",
-    "            out.write(cv2.cvtColor(output, cv2.COLOR_GRAY2BGR))  # Convertir a formato BGR para guardar\n",
-    "        else:\n",
-    "            print(output)  # Mostrar el array numpy en la consola\n",
-    "        \n",
-    "        frame_count += 1\n",
-    "    \n",
-    "    cap.release()\n",
-    "    if output_file:\n",
-    "        out.release()\n",
-    "    cv2.destroyAllWindows()\n",
-    "\n",
-    "# Llamar a la función para procesar el video\n",
-    "input_video = 'video.mkv'  # Reemplazar con el nombre de tu archivo de video\n",
-    "output_video = 'video_procesado.mkv'  # Opcional: nombre del archivo de salida, si deseas guardar el video procesado\n",
-    "process_video(input_video, output_video)\n"
    ]
   }
  ],
