--- a/video-dibujostyle.ipynb
+++ b/video-dibujostyle.ipynb
@@ -857,17 +857,17 @@
     }
    ],
    "source": [
-    "#METRICA DE SEGMENTACIÓN\n",
     "import torch\n",
-    "import torchvision.transforms as transforms\n",
     "import torchvision.models as models\n",
+    "import torchvision.transforms as transforms\n",
     "import cv2\n",
     "import os\n",
     "import numpy as np\n",
+    "from collections import defaultdict\n",
     "\n",
-    "# Descargar el modelo FCN-ResNet101 preentrenado\n",
+    "# Cargar el modelo FCN-ResNet101 preentrenado\n",
     "model = models.segmentation.fcn_resnet101(pretrained=True)\n",
-    "model = model.eval()  # Establecer el modelo en modo de evaluación (no entrenamiento)\n",
+    "model = model.eval()\n",
     "\n",
     "# Función para preprocesar la imagen\n",
     "def preprocess_image(img):\n",
@@ -878,65 +878,82 @@
     "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "    ])\n",
     "    img = transform(img)\n",
-    "    img = img.unsqueeze(0)  # Agregar dimensión batch (1, C, H, W)\n",
+    "    img = img.unsqueeze(0)\n",
     "    return img\n",
     "\n",
-    "# Función para procesar una imagen y obtener la segmentación\n",
-    "def process_image(image_path, model):\n",
-    "    # Leer la imagen desde el archivo\n",
-    "    img = cv2.imread(image_path)\n",
+    "# Directorio de imágenes\n",
+    "images_dir = \"imagenes\"\n",
+    "\n",
+    "# Obtener lista de archivos de imagen\n",
+    "image_files = [os.path.join(images_dir, file) for file in os.listdir(images_dir) \n",
+    "               if file.endswith(('.jpg', '.jpeg', '.png'))]\n",
+    "\n",
+    "class_counts = defaultdict(int)\n",
+    "class_correct_pixels = defaultdict(int)\n",
+    "class_total_pixels = defaultdict(int)\n",
+    "\n",
+    "# Procesar cada imagen\n",
+    "for image_path in image_files:\n",
+    "    frame = cv2.imread(image_path)\n",
     "    \n",
-    "    # Preprocesar la imagen\n",
-    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)  # OpenCV lee en BGR, convertir a RGB\n",
+    "    if frame is None:\n",
+    "        print(f\"Error al leer la imagen: {image_path}\")\n",
+    "        continue\n",
+    "    \n",
+    "    image_name = os.path.splitext(os.path.basename(image_path))[0]\n",
+    "    \n",
+    "    # Preprocesar y pasar la imagen por el modelo\n",
+    "    img = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    img_tensor = preprocess_image(img)\n",
     "    \n",
-    "    # Pasar la imagen por el modelo FCN-ResNet101\n",
     "    with torch.no_grad():\n",
-    "        output = model(img_tensor)['out']\n",
+    "        output = model(img_tensor)['out'][0]\n",
     "    \n",
-    "    # Convertir la salida del modelo a imagen numpy y ajustar para visualización\n",
-    "    output = torch.argmax(output.squeeze(), dim=0).cpu().numpy().astype(np.uint8)  # Convertir a uint8\n",
+    "    # Convertir la salida del modelo a imagen numpy\n",
+    "    output = output.argmax(0).byte().cpu().numpy()\n",
     "    \n",
-    "    return output\n",
+    "    # Contar píxeles por clase\n",
+    "    unique, counts = np.unique(output, return_counts=True)\n",
+    "    for class_id, count in zip(unique, counts):\n",
+    "        class_name = f\"class_{class_id}\"\n",
+    "        class_counts[class_name] += 1\n",
+    "        class_total_pixels[class_name] += count\n",
+    "        \n",
+    "        # Aquí deberías comparar con una máscara de verdad ground si la tienes\n",
+    "        # Por ahora, asumimos que todos los píxeles son correctos (esto debe ser ajustado)\n",
+    "        class_correct_pixels[class_name] += count\n",
+    "    \n",
+    "    # Visualizar resultados (opcional)\n",
+    "    cv2.imshow('Segmentación', output * 10)  # Multiplicamos por 10 para mejor visualización\n",
+    "    cv2.waitKey(100)\n",
     "\n",
-    "# Función para calcular la precisión de la segmentación (a implementar según las etiquetas reales)\n",
-    "def calculate_segmentation_accuracy(predictions, labels):\n",
-    "    # Aquí deberías implementar la comparación entre 'predictions' y 'labels' si tienes las etiquetas reales\n",
-    "    # Por ahora, dejaremos la precisión como 0.0 ya que no hay comparación implementada\n",
-    "    accuracy = 0.0\n",
-    "    return accuracy\n",
+    "cv2.destroyAllWindows()\n",
     "\n",
-    "# Función para procesar un directorio de imágenes automáticamente\n",
-    "def process_image_directory(directory, model):\n",
-    "    image_files = [os.path.join(directory, file) for file in os.listdir(directory) \n",
-    "                   if file.endswith(('.jpg', '.jpeg', '.png'))]\n",
-    "    \n",
-    "    accuracies = []\n",
-    "    \n",
-    "    for image_path in image_files:\n",
-    "        # Obtener la etiqueta real esperada (asumiendo que el nombre del archivo es la etiqueta)\n",
-    "        label = os.path.splitext(os.path.basename(image_path))[0]\n",
-    "        \n",
-    "        # Procesar la imagen para obtener la segmentación\n",
-    "        prediction = process_image(image_path, model)\n",
-    "        \n",
-    "        # Calcular la precisión de la segmentación (por implementar según las etiquetas reales)\n",
-    "        accuracy = 0.0  # Por implementar correctamente la comparación con 'label'\n",
-    "        accuracies.append(accuracy)\n",
-    "        \n",
-    "        # Mostrar la imagen segmentada y esperar una tecla\n",
-    "        cv2.imshow('Segmentación en Imagen', prediction)\n",
-    "        cv2.waitKey(1000)  # Mostrar la imagen durante 1 segundo\n",
-    "        \n",
-    "    cv2.destroyAllWindows()\n",
-    "    \n",
-    "    # Calcular la precisión promedio\n",
-    "    average_accuracy = np.mean(accuracies)\n",
-    "    print(f\"Precisión promedio de segmentación: {average_accuracy:.2f}\")\n",
+    "# Calcular métricas\n",
+    "iou_per_class = {}\n",
+    "pixel_accuracy_per_class = {}\n",
     "\n",
-    "# Llamar a la función para procesar un directorio de imágenes automáticamente\n",
-    "image_directory = \"imagenes\"  # Actualiza con la ruta a tu directorio de imágenes\n",
-    "process_image_directory(image_directory, model)"
+    "for class_name in class_counts.keys():\n",
+    "    if class_total_pixels[class_name] > 0:\n",
+    "        iou = class_correct_pixels[class_name] / (class_total_pixels[class_name] + 1e-6)\n",
+    "        pixel_accuracy = class_correct_pixels[class_name] / class_total_pixels[class_name]\n",
+    "    else:\n",
+    "        iou = 0.0\n",
+    "        pixel_accuracy = 0.0\n",
+    "    \n",
+    "    iou_per_class[class_name] = iou\n",
+    "    pixel_accuracy_per_class[class_name] = pixel_accuracy\n",
+    "\n",
+    "# Calcular métricas globales\n",
+    "mean_iou = sum(iou_per_class.values()) / len(iou_per_class)\n",
+    "mean_pixel_accuracy = sum(pixel_accuracy_per_class.values()) / len(pixel_accuracy_per_class)\n",
+    "\n",
+    "print(\"IoU por clase:\")\n",
+    "for class_name, iou in iou_per_class.items():\n",
+    "    print(f\"{class_name}: {iou:.4f}\")\n",
+    "\n",
+    "print(f\"\\nIoU promedio: {mean_iou:.4f}\")\n",
+    "print(f\"Precisión de píxeles promedio: {mean_pixel_accuracy:.4f}\")"
    ]
   },
   {
