--- a/video-dibujostyle.ipynb
+++ b/video-dibujostyle.ipynb
@@ -840,19 +840,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 79\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;66;03m# Llamar a la función para procesar un directorio de imágenes automáticamente\u001b[39;00m\n\u001b[0;32m     78\u001b[0m image_directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimagenes\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# Actualiza con la ruta a tu directorio de imágenes\u001b[39;00m\n\u001b[1;32m---> 79\u001b[0m \u001b[43mprocess_image_directory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_directory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[2], line 69\u001b[0m, in \u001b[0;36mprocess_image_directory\u001b[1;34m(directory, model)\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;66;03m# Mostrar la imagen segmentada y esperar una tecla\u001b[39;00m\n\u001b[0;32m     68\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSegmentación en Imagen\u001b[39m\u001b[38;5;124m'\u001b[39m, prediction)\n\u001b[1;32m---> 69\u001b[0m     \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Mostrar la imagen durante 1 segundo\u001b[39;00m\n\u001b[0;32m     71\u001b[0m cv2\u001b[38;5;241m.\u001b[39mdestroyAllWindows()\n\u001b[0;32m     73\u001b[0m \u001b[38;5;66;03m# Calcular la precisión promedio\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Projects\\TF-PROC.IMAGES\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Projects\\TF-PROC.IMAGES\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=FCN_ResNet101_Weights.COCO_WITH_VOC_LABELS_V1`. You can also use `weights=FCN_ResNet101_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IoU por clase:\n",
+      "class_0: 1.0000\n",
+      "class_11: 1.0000\n",
+      "class_2: 1.0000\n",
+      "class_3: 1.0000\n",
+      "class_5: 1.0000\n",
+      "class_7: 1.0000\n",
+      "class_8: 1.0000\n",
+      "class_12: 1.0000\n",
+      "class_1: 1.0000\n",
+      "class_13: 1.0000\n",
+      "\n",
+      "IoU promedio: 1.0000\n",
+      "Precisión de píxeles promedio: 1.0000\n"
      ]
     }
    ],
